--- a/visualiser.css
+++ b/visualiser.css
@@ -1,3 +1,13 @@
- canvas{
-     border: 1px solid black;
- }
+canvas {
+  border: 1px solid black;
+  margin-top: 10px;
+}
+
+p {
+  margin: 0px;
+}
+
+.controllButton{
+    margin-top: 2px;
+    float:left;
+}
