--- a/visualiser.css
+++ b/visualiser.css
@@ -1,13 +1,15 @@
 canvas {
   border: 1px solid black;
-  margin-top: 10px;
-}
-
-p {
-  margin: 0px;
+  margin-top: 18px;
+  margin-bottom: 2px;
+  display: block;
 }
 
 .controllButton{
     margin-top: 2px;
     float:left;
+}
+
+textarea{
+  display: block;
 }
